# turso-timeseries

./: .gitignore  AGENTS.md  Cargo.toml  PLAN-v2.md  PLAN.md  README.md  RECOMMENDATIONS.md
.cursor/: Dockerfile  environment.json
crates/turso-timeseries/: Cargo.toml
crates/turso-timeseries-arrow/: Cargo.toml
crates/turso-timeseries-arrow/src/: lib.rs  record_batch.rs  schema_map.rs
crates/turso-timeseries-browser-wasm/: Cargo.toml
crates/turso-timeseries-browser-wasm/src/: lib.rs
crates/turso-timeseries-catalog/: Cargo.toml
crates/turso-timeseries-catalog/migrations/: 0001_catalog_and_samples.sql  0002_policies_and_jobs.sql  0003_columnar_hypertables.sql  0004_materialized_rollups.sql  0005_plan_v2_catalog.sql  0006_recommendations_catalog.sql
crates/turso-timeseries-catalog/src/: lib.rs  migrations.rs  schema.rs  views.rs
crates/turso-timeseries-core/: Cargo.toml
crates/turso-timeseries-core/src/: error.rs  lib.rs
crates/turso-timeseries-core/src/codec/: block.rs  mod.rs  segment_format.rs  time_delta.rs
crates/turso-timeseries-core/src/ingest/: batch.rs  encoded_batch.rs  line_protocol.rs  mod.rs  validator.rs  write_buffer.rs
crates/turso-timeseries-core/src/maintenance/: compact.rs  downsample.rs  invalidation.rs  job.rs  mod.rs  retention.rs
crates/turso-timeseries-core/src/model/: cardinality.rs  chunk.rs  hypertable.rs  ids.rs  mod.rs  point.rs  point_v2.rs  rollup.rs  schema.rs  segment.rs  series.rs  series_key.rs  time.rs  value.rs
crates/turso-timeseries-core/src/query/: aggregate.rs  last_value.rs  mod.rs  planner.rs  predicate.rs  scan.rs  stats.rs  time_bucket.rs  window.rs
crates/turso-timeseries-core/src/storage/: catalog.rs  mod.rs  segment_store.rs  transaction.rs
crates/turso-timeseries-core/tests/: aggregate_states.rs  codec_roundtrip.rs  line_protocol.rs  series_key_hash.rs  time_bucket.rs  window_states.rs
crates/turso-timeseries-datafusion/: Cargo.toml
crates/turso-timeseries-datafusion/src/: lib.rs  physical_plan.rs  table_provider.rs
crates/turso-timeseries-e2e/: Cargo.toml
crates/turso-timeseries-e2e/tests/: standalone.rs
crates/turso-timeseries-ext/: Cargo.toml
crates/turso-timeseries-ext-native/: Cargo.toml
crates/turso-timeseries-ext-native/src/: lib.rs
crates/turso-timeseries-ext-wasm/: Cargo.toml
crates/turso-timeseries-ext-wasm/src/: panic.rs
crates/turso-timeseries-ext/src/: lib.rs
crates/turso-timeseries-ingest-core/: Cargo.toml
crates/turso-timeseries-ingest-core/src/: buffer.rs  error.rs  lib.rs  policy.rs
crates/turso-timeseries-ingest-native/: Cargo.toml
crates/turso-timeseries-ingest-native/src/: lib.rs
crates/turso-timeseries-ingest-wasix/: Cargo.toml
crates/turso-timeseries-ingest-wasix/src/: lib.rs
crates/turso-timeseries-ingest-wasm/: Cargo.toml
crates/turso-timeseries-ingest-wasm/src/: lib.rs
crates/turso-timeseries-native/: Cargo.toml
crates/turso-timeseries-native/src/: connection.rs  install.rs  lib.rs  maintenance.rs  query.rs  writer.rs
crates/turso-timeseries-native/tests/: write_read.rs
crates/turso-timeseries-wasm-ext/: Cargo.toml
crates/turso-timeseries-wasm-ext/src/: exports.rs  lib.rs  manifest.rs  scalar.rs
crates/turso-timeseries/src/: lib.rs  migrations.rs  native_turso.rs
crates/turso-timeseries/tests/: integration.rs
docs/: BROWSER_E2E.md  SYNC_FUTURE.md  TESTING.md  TIMESCALE_AND_INFLUX_STRUCTURES.md  TURSO_EXTENSION_API.md
e2e/browser/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
e2e/browser/scripts/: build-custom-turso-wasm.mjs  build-wasm-extension.mjs
e2e/browser/src/: main.ts  runTursoTimeseriesBrowserE2E.ts  sandbox.ts  style.css  tursoTimeseriesExtension.ts
e2e/browser/tests/: browser.test.ts
