[workspace]
resolver = "2"
members = [
  "crates/turso-timeseries",
  "crates/turso-timeseries-browser-wasm",
  "crates/turso-timeseries-e2e",
  "crates/turso-timeseries-ext",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyperdrive/turso-timeseries"
rust-version = "1.95"

[workspace.dependencies]
# Version shared by extension crates; enable `features = ["static"]` on the dependency (see limbo_fuzzy).
turso_ext = { version = "=0.6.0-pre.30" }
