[workspace]
resolver = "2"
members = [
  "crates/turso-timeseries",
  "crates/turso-timeseries-core",
  "crates/turso-timeseries-catalog",
  "crates/turso-timeseries-native",
  "crates/turso-timeseries-ext-wasm",
  "crates/turso-timeseries-ext-native",
  "crates/turso-timeseries-ingest-core",
  "crates/turso-timeseries-ingest-native",
  "crates/turso-timeseries-ingest-wasm",
  "crates/turso-timeseries-ingest-wasix",
  "crates/turso-timeseries-arrow",
  "crates/turso-timeseries-datafusion",
  "crates/turso-timeseries-browser-wasm",
  "crates/turso-timeseries-e2e",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyperdrive/turso-timeseries"
rust-version = "1.95"

[workspace.dependencies]
# Version shared by extension crates; enable `features = ["static"]` on the dependency (see limbo_fuzzy).
turso_ext = { version = "=0.6.0-pre.30" }

[profile.release]
lto = true
opt-level = "s"
