[package]
name = "turso-timeseries-browser-wasm"
description = "wasm-bindgen exports for turso-timeseries browser sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
turso-timeseries = { path = "../turso-timeseries" }
wasm-bindgen = "0.2.100"
