[package]
name = "turso-timeseries-ext"
description = "Turso-native extension for turso-timeseries E2E coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
static = ["turso_ext/static"]

[dependencies]
turso_ext = { workspace = true, features = ["static"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "=0.1.48", default-features = false }
