[package]
name = "turso-timeseries-ingest-wasm"
description = "Browser worker WASM helper for ingest batching (wasm-bindgen)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
turso-timeseries-ingest-core = { path = "../turso-timeseries-ingest-core" }
wasm-bindgen = "0.2"
